* Fixed filename overflow styles

--- a/src/index.less
+++ b/src/index.less
@@ -552,6 +552,10 @@
         padding: 8px;
         .field-image-name {
             float: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: calc(~"100% - 110px");
             height: 50px;
             line-height: 50px;
             margin-left: 12px;
